[main@e6a3dc6] Update AL-Go System Files from TRASER-Software-GmbH/AL-Go-AppSource@main - 2ccbee8

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -12,5 +12,6 @@
       "projects": "*",
       "authTokenSecret": "ghTokenWorkflow"
     }
-  ]
+  ],
+  "templateSha": "2ccbee83976511ece8583dc63746a84e7cf50e45"
 }
